--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,19 +1,224 @@
 # Jobs
-# VP of Global Communications
-- company: Springfield International Human Rights Outreach
-  position: VP of Global Communications
-  duration: Oct, 2013 &mdash; Present
-  summary: Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>A project you are proud of</li><li>Another awesome project</li><li>or a team or department you worked with</li></ul>
-
-# Director of Digital Stratgy
-- company: United Nations Human Rights Council
-  position: Director of Digital Strategy
-  duration:  Jun, 2010 &mdash; Sept, 2013
-  summary: If your stint was shorter, feel free to be brief and just call out the most meaningful points of your role. Be concise, and be meaninful. The person reading just needs enough to want to talk to you more about your experience.
+# Curatrice
+- company: Margine Operativo
+  position: collaboratrice/guida
+  duration: 13 Dicembre 2020
+  summary: Ideatrice ed esecutrice, insieme a Margine Operativo, del digital walk "Il Quadraro, la sua storia e la street art" all'interno della programmazione del progetto Ai Confini dell'Arte 2020
 
 
-# Communications Coordinator
-- company: Springfield Women & Children's Center
-  position: Communications Coordinator
-  duration:   Jun, 2008  &mdash; May, 2010
-  summary: Led communication efforts across digital and traditional media channels for marketing and public relations, internal communication strategies, and coordinated support programs for the recipients of the center's services.
+
+- company: RAW - Rome Art Week
+  position: curatrice
+  duration: Ottobre 2020
+  summary: Curatrice dell'esposizione "Verticalia", progetto triennale che mira al coinvolgimento di artisti emegenti e del territorio
+
+
+# Istruttore URP Comune di Roma
+- company: Comune di Roma Dipartimento Attività Culturali
+  position: redattrice pagine web
+  duration: Settembre 2020 &mdash; in corso
+  summary: Attività di accoglienza al cittadino e gestione tecnico amministrativa dell'Ufficio Relazioni con Pubblico
+
+
+# Curatrice
+- company: Bluecheese Project
+  position: Curatrice e ricercatrice
+  duration: 24 - 29 Agosto 2010
+  summary: Curatrice dell’esposizione “Io dico” nell’ambito del progetto triennale “Rione Roma”, in collaborazione con l’associazione Bluecheese Project. Il percorso espositivo vedrà coinvolte le vie del Rione Ponte in Roma, mostra di arte diffusa e partecipata
+
+
+# Organizzatrice di visite guidate e tours
+- company: Associazione Culturale OrbitArte
+  position: Co-fondatrice, rganizzatrice, amministratrice e guida
+  duration: 2018  &mdash; tutt'ora in corso
+  summary: Attività di organizzazione e di eventi e workshop, attività di guida presso mostre e luighi di Roma e dintorni
+
+
+# Curatrice
+- company: RAW - Rome Art Week
+  position: Curatrice
+  duration: 20 Ottobre &mdash; 11 Novembre 2018
+  summary: Curatrice della mostra “Ognuno si faccia i propri Duchamp. Omaggio a Gianpaolo Berto”, in occasione di RAW - Rome Art Week 2018, presso Studio Sotterraneo, Roma
+  url: https://romeartweek.com/
+
+
+
+# Curatrice
+- company: StudioSotterraneo
+  position: Curatrice
+  duration: 25 Maggio &mdash; 17 Giugno 2018
+  summary: Curatrice della esposizione personale di Luis Cutrone “Tra ombra e luce” presso spazio espositivo Ozio Pigneto
+  url: https://www.facebook.com/events/303169303553184/
+
+
+# Organizzatrie e guida
+- company: Bauci Park - Bluecheese Project
+  position: Organizzatrice e guida
+  duration: 23 novembre 2017
+  summary: Organizzatrice e guida dell’evento/visita guidata presso il quartiere Quadraro di Roma in occasione della manifestazione "Bauci Park", evento di visual storytelling attraverso passeggiate artistiche
+  url: https://www.facebook.com/Ass.Bluecheese/
+
+
+# Organizzatrice e guida
+- company: Associazione culturale "Inforidea"
+  position: Organizzatrice e guida
+  duration: 28 ottobre &mdash; 1 novembre 2017
+  summary: Organizzatrice e guida, in collaborazione con l’Associazione culturale "Inforidea", di 5 giornate di trekking e cultura nei dintorni di Roma
+
+
+# Curatrice
+- company: StudioSotterraneo
+  position: Curatrice
+  duration: Settembre &mdash; Ottobre 2017
+  summary: Curatrice e organizzatrice dell’esposizione personale di Luis Cutrone, presso Studio Sotterraneo
+  url: https://www.orbitarte.it/it/luis-cutrone-studio-sotterraneo/
+
+
+# Presidente e fondatrice
+- company: Associazione Culturale OrbitArte
+  position: Organizzatrice di eventi, curatrice, amministratrice e guida
+  duration: 3 Ottobre 2016  &mdash; tutt'ora in corso
+  summary: Presidente e fondatrice dell’Associazione culturale "OrbitArte", volta alla promozione del patrimonio artistico di Roma e dell’Italia in generale
+  url: www.orbitarte.it
+
+
+# Organizzatrice e relatrice
+- company: Sapienza Università di Roma
+  position: Organizzatrice e relatrice
+  duration: Roma 21 - 22 - 23 aprile 2016, Sapienza Università di Roma.
+  summary: Organizzatrice e relatrice del convegno “In Corso d"Opera 2. Giornate di studio dei dottorandi di ricerca in storia dell’arte della Sapienza Università di Roma”
+
+
+# Organizzatrice
+- company: Associazione culturale PiuVolume
+  position: Organizzatrice
+  duration: 11 &mdash; 13 Settembre 2015
+  summary: Organizzatrice, in collaborazione con l’associazione culturale PiuVolume, dell’esposizione “Apparizioni”, presso i Giardini di Castel Sant’Angelo, Roma. Mostra creata con la partecipazione della Mutoid Waste Company di Santarcangelo di Romagna
+
+
+
+# Technical Specialist
+- company: Apple Retail Italia
+  position: Technical Specialist
+  duration: 23 Febbraio 2013 &mdash; Settembre 2020
+  summary: Tecnico di alto profilo, con mansioni di assistenza tecnica specializzata
+
+
+# Relatrice e organizzatrice
+- company: Sapienza Università di Roma
+  position: Relatrice e organizzatrice
+  duration: 28 febbraio 2012
+  summary: Relatrice e organizzatrice della tavola rotonda “The Boom is Over. Long live The Art – L’arte ai tempi della crisi”, giornata di studio tenutasi presso Sapienza Università di Roma
+
+
+# Borsista funzionario
+- company: Sovraintendenza Capitolina - Roma Capitale - Catalogo Unico e Didattica
+  position: Titolare borsa lavoro
+  duration: 15 luglio 2011 &mdash; 12 febbraio 2012
+  summary: progettazione percorsi didattici, redazione schede didattiche mostre, catalogazione Simart, web marketing, gestione account social network
+
+
+# Redattrice
+- company: NextExit - Fefè Art Magazine
+  position: Redattrice
+  duration: 2 maggio &mdash; 14 luglio 2011
+  summary: Stesura del volume “RomaCreativa. Persone e luoghi della provincia che cambia”, seconda edizione che racconta la vitalità culturale e le industrie creative della Provincia di Roma attraverso i ritratti dei suoi protagonisti
+
+
+# Saggista
+- company: Istituto Nazionale per la Grafica, Palazzo Poli, Roma
+  position: Collaboratrice saggista
+  duration: Dicembre 2010 &mdash; marzo 2011
+  summary: Collaborazione in veste di saggista alla stesura del catalogo della mostra "Ah, che rebus! Cinque secoli di enigmi fra arte e gioco in Italia", curata da Antonella Sbrilli e Ada De Pirro, presso l’Istituto Nazionale per la Grafica
+
+
+# Guida
+- company: Associazione Romandando
+  position: Guida turistica
+  duration: Settembre 2010 &mdash; Dicembre 2017
+  summary: Guida
+
+
+# Orgnanizzatrice
+- company: Galleria Nazionale d'Arte Moderna e Contemporanea e Sapienza Università di Roma
+  position: Ideazione, progettazione e gestione
+  duration: 13 marzo 2010 &mdash; 21 maggio 2010
+  summary: Ideazione, progettazione e gestione del ciclo di conferenze di durata pluriennale “Esperienze contemporanee. Tecniche, strumenti, comunicazione”, in collaborazione con la Galleria Nazionale d’Arte Moderna e Contemporanea di Roma e con Sapienza Università di Roma. Le conferenze vedono coinvolti artisti, artigiani, galleristi e curatori come Luigi Ontani, Fabio Sargentini, Ida Gerosa, Massimo Bartolini, Davide Servadei, Paola Capata, Luisa Montalto, Claudio Abate. Da tali incontri verrà ricavata una pubblicazione con gli interventi dei protagonisti e alcuni saggi
+
+
+# Comparsa
+- company: Galleria L’Attico
+  position: Partecipazione attiva alla performance teatrale
+  duration: 23 &mdash; 31 marzo 2010
+  summary: Partecipazione attiva alla performance teatrale "Obliquo Pirandello" alla Galleria L’Attico, ideazione e regia di Fabio Sargentini e Elsa Agalbato
+
+
+# Redattrice
+- company: Flash Art
+  position: Redattrice
+  duration: Maggio 2009 &mdash; tuttora in corso
+  summary: Collaborazione con la rivista di arte contemporanea "Flash Art" nella realizzazione di recensioni e articoli inerenti a mostre presenti a Roma
+
+
+# Guida e servizio di guardiania
+- company: MondoMostre s.r.l.
+  position: Guida museale e servizio di guardiania
+  duration: Novembre 2009 &mdash; Gennaio 2010
+  summary: Collaborazione con MondoMostre s.r.l. presso Palazzo Venezia di Roma, in occasione della mostra “Il potere e la grazia. Santi patroni d"Europa”
+
+
+# Collaboratrice organizzatica
+- company: Sapienza Università di Roma
+  position: Progettazione e organizzazione
+  duration: Giugno 2009
+  summary: Lavoro di progettazione e organizzazione della mostra personale dell’artista Piero Fantastichini, dal titolo “Luminescenze” tenutasi presso Castel S’Angelo in Roma
+
+
+
+# Assistente alla cattedra di Storia dell'Arte Contemporanea
+- company: Sapienza Università di Roma
+  position: Collaboratrice assistente
+  duration: Gennaio 2008 &mdash; dicembre 2014
+  summary: Collaborazione, con la Prof.ssa Jolanda Nigro Covre finalizzata all’organizzazione di attività formative inerenti al corso di laurea, tutorato studenti, reperimento di materiale fotografico utile per lo svolgimento delle lezioni, assistenza agli esami, tutorato tesi
+
+
+# Relatrice
+- company: Sapienza Università di Roma
+  position: Relatrice e organizzatrice
+  duration: 2008
+  summary: Creazione di un seminario sul Surrealismo, con riferimento al rapporto di tale movimento con le ricerche cinematografiche, partendo dagli inizi Dada fino ai film prettamente surrealisti da Artoud alla coppia Dalì – Bunuel; in collaborazione con la Prof.ssa Ilaria Schiaffini presso Sapienza Università di Roma
+
+
+# Collaboratrice redattrice
+- company: Nuovo Archivio dei Macchiaioli
+  position: Redattrice
+  duration: 2007
+  summary: Collaborazione con il professor Dario Durbè nella stesura e impaginazione di una nuova monografia su Giovanni Fattori in occasione del centenario della morte dell’artista, nonché attività di aggiornamento dell’archivio presso il “Nuovo Archivio dei Macchiaioli”, sito in vicolo De’ Bovari 11 di Roma
+
+
+# Redattrice
+- company: MACRO Museo d'Arte Contemporanea di Roma
+  position: Redattrice
+  duration:  2007
+  summary: Collaborazione con il MACRO Museo d’Arte Contemporanea di Roma, nella produzione di opuscoli informativi concernenti in particolare il gruppo Fluxus, e in generale gli artisti ospitati dal gruppo MACRO
+
+
+# Guida turistica
+- company: Comune di Naro (AG)
+  position: Guida turistica
+  duration: 2006
+  summary: Guida turistica nella città di Naro con particolare riferimento all'architettura Barocca, volta alla riqualificazione del territorio
+
+
+# Organizzatrice
+- company: Sapienza Università di Roma
+  position: Organizzatrice
+  duration: 2006
+  summary: Creazione di un seminario sulla critica d’arte incentrata sugli anni Venti del Novecento, con particolare riferimento al lavoro di Maurizio Calvesi; in collaborazione con la professoressa Jolanda Nigro Covre, presso Sapienza Università di Roma
+
+
+
+# Segretaria e gestione agenda
+- company: Mapa Tattoo
+  position: Segretaria
+  duration:  2005
