--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,4 +1,4 @@
 # Interests
-- description: Human rights and world affairs
-- description: Music (baritone saxiphonist)
-- description: Linguistics
+- description: Il mio maggior interesse è l'Arte, in particolare l'arte contemporanea e i suoi sviluppi più controversi
+- description: Musica Rock e gatti
+- description: La lingua spagnola è una scoperta recente, la sto ancora studiando ma parlo e capisco lo spagnolo abbastanza bene
