--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,5 +1,3 @@
 # links
-- url: "#"
-  description: Springfield Jazz Enthusiasts
-- url: "#"
-  description: Springfield Young Professionals
+- url: "https://orbitarte.it"
+  description: OrbitArte, la mia associazione culturale, qui troverete anche saggi e approfondimenti di varia natura
