--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,12 +1,10 @@
 # Skills
-# Organizational leadership
-- skill: Organizational leadership
-  description: I have several years of experience leading organziations from community groups to business departments. From public speaking, to mentoring, to coordination of people and events, I can lead in any context.
-
-# Communications strategy
-- skill: Communications strategy
-  description: Content and marketing strategy,
-
-# Digital content development and creation
-- skill: Digital content development and creation
-  description: Copy writing, graphic design, web design, front-end web development, print design
+# Organizational leadership - Communications strategy -  Digital content development and creation
+- skill: Competenze relazionali
+  description: Ottima capacità di problem solving. Buona attitudine alla leadership con spiccata capacità di mantenere un clima di armonia e di rilassatezza, volto alla massima attività produttiva.<br/><br/> Lavorare in Apple inoltre mi ha dato modo di sviluppare alcune skills particolari come Motivating Others, Planning and Organizing, Drive for Result, Dealing with Ambiguity, Presentation Skills, Priority Setting, Learning Agility, Fluent English.
+- skill: Informatica
+  description: Ottima conoscenza di internet, buona conoscenza del pacchetto Office.<br/> Ottima conoscenza dei sistemi operativi iOS e macOs. Ottima conoscenza di programmi come Pages, Keynote, Numbers.<br/> Ottima conoscenza della gestione account mail, pec, account social network
+- skill: Attestati
+  description: In possesso di attestato di frequenza corso regionale volto all’uso specifico del programma di Microsoft Office Word
+- skill: Varie
+  description: Appartenente alle categorie protette, invalidità civile legge 68/99
