--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -1,15 +1,22 @@
 # Associations
 # comment out the urls if you do not wish to display them
 
-- organization: PETA
-  role: Volunteer
-  year: 2001 &mdash; 2010
-  url: https://www.peta.org/
-  summary: Organized fund drives and participated in fundraising events for the benefit of PETA's local Springfield operations.
+- organization: Inforidea
+  role: Organizzatrice e guida
+  year: 2017
+  url: https://www.inforideeinmovimento.org
+  summary: Organizzazione di 5 giornate di trekking e cultura nella campagna romana.
 
 
-- organization: Yale Amnesty International
-  role: Communications coordinator
-  year: 2002 &mdash; 2004
-  url: http://campuspress.yale.edu/amnesty/
-  summary: During my junion and senior years at Yale, I was actively involved in Yale Amnesty International where I helped facilitate our student organization communications through website maintenance, writing for our campus publication, and graphic design of related materials.
+- organization: Bluecheese
+  role: Organizzatrice e guida
+  year: 2015 &mdash; ancora oggi in corso
+  url: https://baucipark.com/il-progetto/
+  summary: Organizzazione e curatela di eventi ed esposizioni, volte alla riqualificazione e fruizione del patrimonio artistico nazionale e internazionale.
+
+
+- organization: Studiosotterraneo
+  role: Curatrice
+  year: 2017 &mdash; 2018
+  url: https://www.facebook.com/StudioSotterraneo/
+  summary: Curatrice
