--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,13 +1,17 @@
 # Degree
-- degree: Bachelor of Arts, Human Rights
-  uni: Yale University
-  year: 2004 &mdash; 2008
-  awards:
-    - award: Summa Cumme Laude graduate
-  summary: If you had any meaningful roles at college, feel free to write about them here
+- degree: 博士(工学)
+  uni: 中央大学大学院　理工学研究科　土木工学専攻
+  year: 2011 &mdash; 2016
+  award: 博士論文題目　<a href="https://ci.nii.ac.jp/naid/500001350076" target="_blank">A Hydrologic-based Lumped Methdology for the Internal Dose Calculation</a>
+  summary: <ul class="resume-item-list"><li>水文学的集中化法に基づいた、放射性同位体を経口摂取したときの被曝線量を求める方法論を提案した。</li><li>放射性同位体が混入した土壌で収穫された農作物を食べた時に受ける被曝線量を計算する手法を示した。</li><li>放射性同位体の摂取量の不確実性を考えに取り入れ、被曝線量の確率密度関数の時間発展をFokker-Planck方程式に基づいて計算する手法を提案した。</li></ul>
 
-- degree: High School Diploma
-  uni: Springfield High School
-  year: 2004
-  award: Most likely to succeed
-  summary: You can choose to have either a single or multiple awards
+- degree: 修士(工学)
+  uni: 中央大学　理工学研究科　電気電子情報通信工学専攻
+  year: 2009 &mdash; 2011
+  award:  修士論文　<a href="https://cir.nii.ac.jp/crid/1050282677674317952" target="_blank">磁気力顕微鏡によるパターン媒体の磁化状態観察及び磁化反転特性の検討</a>
+
+- degree: 学士(工学)
+  uni: 中央大学
+  year: 2005 &mdash; 2009
+  award: 
+  summary:
