--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -21,5 +21,5 @@
 # Yamaguchi University
 - company: 山口大学工学部
   position: 社会建設工学科　学術研究員
-  duration: 2016年4月  &mdash; May, 2019年3月
+  duration: 2016年4月  &mdash; 2019年3月
   summary: <ul class="resume-item-list"><li>人工衛星の画像から河川の河道内で植生が繁茂している領域の推定 <a href="https://www.jstage.jst.go.jp/article/jscejer/73/5/73_I_303/_article/-char/ja/" target="_blank">(link)</a></li><li>人工衛星の画像から泥炭地の土砂崩れの検出と、土砂崩れの発生と降雨量や風速などの気象データとの関係の分析</li><li>水面下の地形を写真測量するためのアルゴリズムの理論的研究</li></ul>
