--- a/_data/education.yml
+++ b/_data/education.yml
@@ -3,7 +3,7 @@
   uni: 中央大学大学院　理工学研究科　土木工学専攻
   year: 2011 &mdash; 2016
   award: 博士論文題目　<a href="https://ci.nii.ac.jp/naid/500001350076" target="_blank">A Hydrologic-based Lumped Methdology for the Internal Dose Calculation</a>
-  summary: <ul class="resume-item-list"><li>水文学的集中化法に基づいた、放射性同位体を経口摂取したときの被曝線量を求める方法論を提案した。</li><li>放射性同位体が混入した土壌で収穫された農作物を食べた時に受ける被曝線量を計算する手法を示した。</li><li>放射性同位体の摂取量の不確実性を考えに取り入れ、被曝線量の確率密度関数の時間発展をFokker-Planck方程式に基づいて計算する手法を提案した。</li></ul>
+  summary: <ul class="resume-item-list"><li>水文学的集中化法に基づいた、放射性同位体を経口摂取したときの被曝線量を求める方法論を提案した <a href="https://www.jstage.jst.go.jp/article/jjshwr/27/4/27_170/_article" target="_blank">(link)</a></li><li>放射性同位体が混入した土壌で収穫された農作物を食べ. 時に受ける被曝線量を計算する手法を示した <a href="https://www.jstage.jst.go.jp/article/jscejhe/71/4/71_9/_article/-char/ja/" target="_blank">(link)</a></li><li>放射性同位体の摂取量の不確実性を考えに取り入れ、被曝線量の確率密度関数の時間発展をFokker-Planck方程式に基づいて計算する手法を提案した <a href="https://www.jstage.jst.go.jp/article/jscejhe/72/4/72_I_457/_article/-char/ja/" target="_blank">(link)</a></li></ul>
 
 - degree: 修士(工学)
   uni: 中央大学　理工学研究科　電気電子情報通信工学専攻
