--- a/_data/education.yml
+++ b/_data/education.yml
@@ -6,6 +6,7 @@
   summary: 
 
   certs:
+    - cert: AWS Certified Developer - Associate
     - cert: AWS Certified Solutions Architect - Associate
     - cert: Cradlepoint Certified Network Professional
     - cert: Meraki Certified Meraki Network Associate (CMNA)
