--- a/_config.yml
+++ b/_config.yml
@@ -9,19 +9,19 @@ sass:
   style: compressed
 
 # Resume settings
-resume_avatar:                  "true"
-resume_name:                    "Petrila Paul-Cosmin"
-resume_title:                   "Software developer"
+resume_avatar: "true"
+resume_name: "Petrila Paul-Cosmin"
+resume_title: "Software developer"
 
 # used for the contact button in _layouts/resume.html
-resume_contact_email:           "petrila.paulcosmin@gmail.com"
+resume_contact_email: "petrila.paulcosmin@gmail.com"
 
 # the next two items are used for schema itemprops in _layouts/resume.html
-resume_contact_telephone:       "0751851229"
-resume_contact_address:         ""
+resume_contact_telephone: "0751851229"
+resume_contact_address: ""
 
-resume_header_contact_info:     "742 Evergreen Terrace, Springfield • 555-7334 • lisasimpson@youremailaddress.com"
-display_header_contact_info:    "false"
+resume_header_contact_info: "742 Evergreen Terrace, Springfield • 555-7334 • lisasimpson@youremailaddress.com"
+display_header_contact_info: "false"
 
 resume_header_intro: "<p>Computer science high-school graduate and present 3rd year Computer Engineering student, highly interested in technology and programming, I'm doing my best to take in as much information and learn as much as possible in the fields I'm interested in, so far I've jumped from one domain to another, trying to see what works best for me and building up my skill set.</p>"
 
@@ -29,35 +29,35 @@ resume_header_intro: "<p>Computer science high-school graduate and present 3rd y
 # "no" to display an "I'm not looking for work" message,
 # or remove the resume_looking_for_work option entirely
 # to leave blank
-resume_looking_for_work:        "yes"
+resume_looking_for_work: "yes"
 
 # Decide which sections to use
 # comment out to hide
-resume_section_experience:      true
-resume_section_education:       true
-resume_section_projects:        true
-resume_section_skills:          true
-resume_section_recognition:     true
-resume_section_links:           true
-resume_section_associations:    true
+resume_section_experience: true
+resume_section_education: true
+resume_section_projects: true
+resume_section_skills: true
+resume_section_recognition: true
+resume_section_links: true
+resume_section_associations: true
 # resume_section_interests:       true
 
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
 resume_social_links:
-  resume_github_url:            "https://github.com/jglovier/resume-template"
+  resume_github_url: "https://github.com/jglovier/resume-template"
   # resume_twitter_url:           "http://twitter.com/jglovier"
   # resume_dribbble_url:          "https://dribbble.com/jag"
-  resume_facebook_url:          "https://www.facebook.com/paulcosmin.petrila"
-  resume_linkedin_url:          "https://www.linkedin.com/in/paul-cosmin/"
+  resume_facebook_url: "https://www.facebook.com/paulcosmin.petrila"
+  resume_linkedin_url: "https://www.linkedin.com/in/paul-cosmin/"
   # resume_instagram_url:         "insert your Instagram URL here"
-  resume_website_url:           "https://cv.paulpetrila.com/"
+  resume_website_url: "https://cv.paulpetrila.com/"
   # resume_medium_url:            "https://medium.com/@jglovier"
-resume_print_social_links:      true
+  resume_docker_url: "https://www.docker.com"
+resume_print_social_links: true
 
 # Design settings
-resume_theme:                   default
-
+resume_theme: default
 # Note: when editing locally, remember to restart
 # your Jekyll server when you edit this file. Changes
 # to _config.yml are only recognized when the server starts
