Add experiences and add projects boilerplate

--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,4 +1,5 @@
 # Interests
-- description: Human rights and world affairs
-- description: Music (baritone saxiphonist)
-- description: Linguistics
+- description: Robotics and Automation of common modern problems
+- description: Cooking
+- description: Linux ricing and Bash scripting ( Neovim enjoyer )
+- description: Writing and Poetry
