--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -5,20 +5,20 @@
   duration: Aug, 2022 &mdash; Present
   summary: As a software developer with experience in web technologies, I bring a unique combination of technical skills and creativity to my work at Adservio. With a strong background in building and maintaining web applications, I have the ability to turn complex problems into user-friendly solutions. My experience working with a variety of programming languages and frameworks, combined with my attention to detail and commitment to delivering quality results, has allowed me to make a significant impact on projects and ensure the success of my team. My passion for technology and ability to work effectively in a team environment make me an invaluable asset to Adservio. Projects I'm involved in at Adservio include <ul class="resume-item-list"><li>A billing module using Stripe</li><li> An admission module for Universities </li><li> General maintenance of the whole EdTech platform used by thousands of parents, teachers and students daily</li></ul>
 
-# Pentalog 
+# Pentalog
 - company: Pentalog
   position: Software Developer Internship
   duration: Jul, 2022 &mdash; Sept, 2022
-  summary: During my internship I developed and learned about the .NET framework. I built a simple CRUD API using Web Assembly and a webpage in ASP.NET with Blazor components. 
+  summary: During my internship I developed and learned about the .NET framework. I built a simple CRUD API using Web Assembly and a webpage in ASP.NET with Blazor components.
 
 # AMD
 - company: AMD
   position: Communications Coordinator
   duration: Jul, 2022  &mdash; Jul, 2022
-  summary: I entered a summer bootcamp at AMD where I learned the basics of Verilog programming. I managed to find out that lower level programming isn't for me and I kept searching for something that I enjoy doing. 
+  summary: I entered a summer bootcamp at AMD where I learned the basics of Verilog programming. I managed to find out that lower level programming isn't for me and I kept searching for something that I enjoy doing.
 
 # Freelance
 - company: Freelance
   position: Software Developer
   duration: Jun, 2018  &mdash; May, 2020
-  summary: While in Highschool I had time to experiment with many technologies: Unity, Blender, Arduino and among various other miniprojects. By far the most significant was when I developed and maintened an educational platform at my Highschool for an ISJ programme called "The school for Authentic Values". The web app was built using Laravel 5, bootstrap 3 and a lot of hard work from me and a collegue of mine. The teachers could upload photos and documents as proof of events that they held. Events were ordered by month and year.
+  summary: While in Highschool I had time to experiment with many technologies( Unity, Blender, Arduino and among various other miniprojects). By far the most significant was when I developed and maintened an educational platform at my Highschool for an ISJ programme called "The school for Authentic Values". The web app was built using Laravel 5, bootstrap 3 and a lot of hard work from me and a collegue of mine. The teachers could upload photos and documents as proof of events that they held. Events were ordered by month and year.
