--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,5 +1,5 @@
 # Interests
-- description: Robotics and Automation of common modern problems
+- description: Robotics
 - description: Cooking
 - description: Linux ricing and Bash scripting ( Neovim enjoyer )
 - description: Writing and Poetry
