--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,28 +1,28 @@
 # Projects
 # uncomment the urls if you wish to display them, and add your own URL
 
-# jazznotes.io
-- project: jazznotes.io
+# Paul omul
+- project: Paul Omul
   role: Founder & Primary Developer
-  duration: 2012 &mdash; Present
-  # url: "#"
-  description: Jazz Notes is an open source node/ember app that helps you keep track of your music compositions and new ideas.
+  duration: 2023 &mdash; Present
+  url: "omul.paulpetrila.com"
+  description: A website to keep track of my best poems and writings.
 
-# Springfield Community Outreach Group
-- project: Springfield Community Outreach Group
+# cooking.paulpetrila.com
+- project: Cooking blog
   role: Co-Founder & Organizer
   duration: 2007 &mdash; Present
   # url: "#"
   description: SCOG is a local monthly meetup in Springfield where we share opportunities to volunteer in the community and organize support for families and neighborhoods in need of assistance that the community can provide.
-# jazznotes.io
-- project: jazznotes.io
+# poketcats.paulpetrila.com
+- project: Pocket Cats
   role: Founder & Primary Developer
   duration: 2012 &mdash; Present
   # url: "#"
   description: Jazz Notes is an open source node/ember app that helps you keep track of your music compositions and new ideas.
 
 # Springfield Community Outreach Group
-- project: Springfield Community Outreach Group
+- project: Paulbook
   role: Co-Founder & Organizer
   duration: 2007 &mdash; Present
   # url: "#"
