--- a/_data/education.yml
+++ b/_data/education.yml
@@ -6,7 +6,7 @@
     - award: Summa Cumme Laude graduate
   summary: If you had any meaningful roles at college, feel free to write about them here
 
-- degree: High School Diploma
+- degree: IT Certificate
   uni: Springfield High School
   year: 2004
   award: Most likely to succeed
