--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -17,6 +17,12 @@
   duration: Jul, 2022  &mdash; Jul, 2022
   summary: I entered a summer bootcamp at AMD where I learned the basics of Verilog programming. I managed to find out that lower level programming isn't for me and I kept searching for something that I enjoy doing.
 
+# The Odin Project
+- company: The Odin Project
+  position: Intern
+  duration: Jul, 2021 &mdash; , 2022
+  sumary: I've found this open source curriculum in my searches of becoming a better dev. It took around a year to complete it, but I learnt enough to get my first job and do some cool projects while doint it.
+
 # Freelance
 - company: Freelance
   position: Software Developer
