--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -4,19 +4,19 @@
   role: IT Department Volunteer
   year: 2020 &mdash; Present
   url: https://www.lsaciasi.ro/
-  summary: I'm one of the four students that are in charge of the League's website. We're adding functionality before events, as needed. I've worked with map APIs and PHP on the older websides. We're developing the new ones in React and Nodejs. We've made website for all our events: ITMarathon, DevMe summer camp, LAN Party etc.
+  summary: >
+    I'm one of the four students that are in charge of the League's website. We're adding functionality before events, as needed. I've worked with map APIs and PHP on the older websides. We're developing the new ones in React and Nodejs. We've made website for all our events: ITMarathon, DevMe summer camp, LAN Party etc.
 
 - organization: Tineri de Succes
   role: Volunteer
   year: 2018 &mdash; 2019
   url: https://www
-  summary: During my stay as a volunteer in this association I made multiple public speeches and worked with my colleagues to organize the tech-side of the events held. They focus on teaching students about leadership and starting businesses in Romania
-
+  summary: >
+    During my stay as a volunteer in this association I made multiple public speeches and worked with my colleagues to organize the tech-side of the events held. They focus on teaching students about leadership and starting businesses in Romania
 
 - organization: Moldavia
   role: Volunteer
   year: 2018 &mdash; 2019
   url: https://www.facebook.com/asociatiamoldavia/
-  summary: I was mainly tasked with the back-end, preparing the events sound-wise and dealing with the problems that arose during them, this is where I've found my problem solving passion that helped me power through the bugs and errors in my code
-
-
+  summary: >
+    I was mainly tasked with the back-end, preparing the events sound-wise and dealing with the problems that arose during them, this is where I've found my problem solving passion that helped me power through the bugs and errors in my code
