Fix Jekyll pipeline

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -4,7 +4,6 @@
       "Gheorghe Asachi" Technical University of Iasi
   year: 2020 &mdash; 2024
   awards:
-    # - award: License [ Soon ]
     - award: Programming a 5G module for tracking tower information, GPS and signal strength within Iasi
     - award: >
       Learning about operating and programming Fanuc Robots
@@ -15,7 +14,7 @@
       I had from high school. I gained a comprehensive understanding of computer systems, including hands-on 
       experience with logic gates and microcontrollers. I consistently challenged myself by taking mathematics 
       coursework each semester, which proved to be a difficult but rewarding experience. Through these subjects, 
-      I developed a passion for understanding how computers work and how mathematics plays a crucial role in this field."
+      I developed a passion for understanding how computers work and how mathematics plays a crucial role in this field.
 
 - degree: High School Diplima in Computer Science
   uni: "Grigore Moisil" Technical High School
