--- a/_data/education.yml
+++ b/_data/education.yml
@@ -5,8 +5,7 @@
   year: 2020 &mdash; 2024
   awards:
     - award: Programming a 5G module for tracking tower information, GPS and signal strength within Iasi
-    - award: >
-      Learning about operating and programming Fanuc Robots
+    - award: Learning about operating and programming Fanuc Robots
   summary: > 
     During my university studies I pursued a range of coursework and hands-on experiences 
     that helped me build a diverse skill set. I was particularly interested in topics like controlling 
